--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
               как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
               тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в
               итоге это не дает нам реального знания. Зубрежка быстро выветривается и не
-              приносит пользы.
-              <span class="two-columns__span-accent"><b>Вывод:</b> учиться тоже нужно уметь,
-                но почему-то этому мало где учат. Что с этим делать?
+              приносит пользы.</p>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">
+                Вывод:
               </span>
+              учиться тоже нужно уметь,
+              но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на
               примере обучения в Практикуме.
@@ -41,99 +46,99 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section-title section-title_bottom-space">Цифры и факты</h2>
-        <h3 class="section-subtitle">Про учёбу и мозг</h3>
-        <div class="table centered">
-          <div class="table__cell">
-            <h4 class="table__heading">86 миллиардов</h4>
+        <h2 class="section-title centered space_bottom">Цифры и факты</h2>
+        <p class="section-subtitle centered">Про учёбу и мозг</p>
+        <ul class="table centered list">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">2.1 миллиарда</h4>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">Число нуждающихся в повышении квалификации
               <span class="table__span-autor">Всемирный Банк, 2017</span>
             </p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">1000 терабайт</h4>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">500 триллионов</h4>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">Число ответственных за обучение нервных
               синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">420 миллионов</h4>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не
               имеющих образования для трудоустройства
               <span class="table__span-autor">Всемирный Банк, 2017</span>
             </p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">17–20 лет</h4>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">1885 год</h4>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
-          </div>
-          <div class="table__cell">
-            <h4 class="table__heading">1889 год</h4>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее</a>
       </section>
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark section-title_bottom-space">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <div class="table table_theme_dark centered">
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">1</h4>
+        <h2 class="section-title section-title_theme_dark centered space_bottom">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark centered">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark centered list">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">2</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">3</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">4</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">5</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">6</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">7</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">8</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">9</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h4 class="table__heading table__heading_theme_dark">10</h4>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <img src="images/kaufman-triangle.svg" class='kaufman__triangle' alt="">
       </section>
     </main>
@@ -141,19 +146,19 @@
       <div class="footer__columns centered">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&copy 2019. Виктор Абанькин</p>
+          <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <ul class="footer__column-links">
-            <li><a class="footer__column_link href="#">Главная</a></li>
-            <li><a class="footer__column_link href="#">Концепция</a></li>
-            <li><a class="footer__column_link href="#">Наставники</a></li>
+          <ul class="footer__column-links list">
+            <li><a class="footer__column_link" href="#">Главная</a></li>
+            <li><a class="footer__column_link" href="#">Концепция</a></li>
+            <li><a class="footer__column_link" href="#">Наставники</a></li>
           </ul>
-        </div>
-        <div class="footer__column footer__column_content_social">
+        </nav>
+        <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <ul class="footer__column-links">
+          <ul class="footer__column-links list">
             <li><a class="footer__column_link" href="#">
               <img src="./images/facebook_color_white.svg" alt="" class="footer__social-icon">
               Facebook
@@ -167,7 +172,7 @@
               Instagram
             </a></li>
           </ul>
-        </div>
+        </nav>
       </div>
     </footer>
   </div>
