--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению
         вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать</a>
-      </h2>
+      </p>
       <div class="header__square-pic"></div>
-      <img class="header__main-illustration" src="images/header-image.png" alt="">
+      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка, фрагмент картины">
     </header>
     <main class="content">
       <section class="description">
@@ -46,18 +46,17 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section-title centered space_bottom">Цифры и факты</h2>
-        <p class="section-subtitle centered">Про учёбу и мозг</p>
-        <ul class="table centered list">
+        <h2 class="section-title digits__section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации
-              <span class="table__span-autor">Всемирный Банк, 2017</span>
-            </p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
@@ -72,8 +71,8 @@
             <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">Число взрослых людей моложе 25 лет, не
               имеющих образования для трудоустройства
-              <span class="table__span-autor">Всемирный Банк, 2017</span>
             </p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
@@ -95,9 +94,9 @@
         <a href="#" class="feynman__link">Подробнее</a>
       </section>
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark centered space_bottom">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_dark centered">от Джоша Кауфмана</p>
-        <ul class="table table_theme_dark centered list">
+        <h2 class="section-title section-title_theme_dark kaufman__section-title">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
@@ -139,36 +138,36 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img src="images/kaufman-triangle.svg" class='kaufman__triangle' alt="">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__columns centered">
+      <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <ul class="footer__column-links list">
-            <li><a class="footer__column_link" href="#">Главная</a></li>
-            <li><a class="footer__column_link" href="#">Концепция</a></li>
-            <li><a class="footer__column_link" href="#">Наставники</a></li>
+          <ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#">Главная</a></li>
+            <li><a class="footer__column-link" href="#">Концепция</a></li>
+            <li><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <ul class="footer__column-links list">
-            <li><a class="footer__column_link" href="#">
-              <img src="./images/facebook_color_white.svg" alt="" class="footer__social-icon">
+          <ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#">
+              <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">
               Facebook
             </a></li>
-            <li><a class="footer__column_link" href="#">
-              <img src="./images/vk_color_white.svg" alt="" class="footer__social-icon">
+            <li><a class="footer__column-link" href="#">
+              <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">
               ВКонтакте
             </a></li>
-            <li><a class="footer__column_link" href="#">
-              <img src="./images/instagram_color_white.svg" alt="" class="footer__social-icon">
+            <li><a class="footer__column-link" href="#">
+              <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">
               Instagram
             </a></li>
           </ul>
