--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению
         вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать</a>
+        <a href="#" class="header__link transition">Узнать</a>
       </p>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
       <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка, фрагмент картины">
     </header>
     <main class="content">
@@ -44,6 +44,83 @@
             </p>
           </div>
         </div>
+      </section>
+      <section class="techniques page__techniques">
+        <h2 class="section-title techniques__section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-attention.png" alt="Книга">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">
+              Глубокие знания возникают, если чередовать сфокусированное и
+              рассеянное мышление.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-recall.png" alt="Статуя">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">
+              Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-interliving.png" alt="Лестница">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">
+              Изучайте несколько навыков одновременно, они обогащают друг друга.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-question.png" alt="Человек в помещении">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">
+              Слушая преподавателя, придумывайте хороший вопрос,
+              который вас действительно волнует.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="/images/cards-competence.png" alt="Стопка книг на руке">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">
+              Повторите про себя, запишите, расскажите другу: вам только кажется,
+              что вы владеете новой темой.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="video">
+        <h2 class="section-title video__section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            Как выучить все. Джош Кауфман
+          </iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            Что происходит в голове прокрастинатора. Тим Урбан
+          </iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя
+              законченным гуманитарием, причём далеко не самым умным. В армии она
+              изучала русский язык, чтобы получить надбавку, да так успешно, что
+              её выдвинули в командиры. Но для продвижения по службе нужно было
+              сдавать математику. И тогда Барбара придумала свой подход к точным
+              наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом
+              знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link transition">Подробнее</a>
       </section>
       <section class="digits">
         <h2 class="section-title digits__section-title">Цифры и факты</h2>
@@ -88,10 +165,24 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+            студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+            всем, кто занимается образованием — так учащиеся повсюду смогут
+            получить навыки и знания, которые приносят успех в школе, карьере и
+            жизни.
+          </blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="/images/khan-book.jpg" alt="Книга Весь мир — школа, Салман Хан">
+            <a href="#" class="khan__buy-link transition">Купить книку</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark kaufman__section-title">Принципы обучения</h2>
@@ -138,7 +229,19 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">
+          Больше материалов о техниках и лайфхаках обучения
+        </p>
+        <div class="resources__logo-zone">
+          <div class="resources__logo resources__logo_type_arzamas"></div>
+          <div class="resources__logo resources__logo_type_nplusodin"></div>
+          <div class="resources__logo resources__logo_type_strelka"></div>
+          <div class="resources__logo resources__logo_type_polka"></div>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -150,23 +253,23 @@
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">Главная</a></li>
-            <li><a class="footer__column-link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link transition" href="#">Главная</a></li>
+            <li><a class="footer__column-link transition" href="#">Концепция</a></li>
+            <li><a class="footer__column-link transition" href="#">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">
+            <li><a class="footer__column-link transition" href="#">
               <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">
               Facebook
             </a></li>
-            <li><a class="footer__column-link" href="#">
+            <li><a class="footer__column-link transition" href="#">
               <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">
               ВКонтакте
             </a></li>
-            <li><a class="footer__column-link" href="#">
+            <li><a class="footer__column-link transition" href="#">
               <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">
               Instagram
             </a></li>
