--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img class="cards__image" src="/images/cards-attention.png" alt="Книга">
+            <img class="cards__image" src="images/cards-attention.png" alt="Книга">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и
@@ -58,21 +58,21 @@
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="/images/cards-recall.png" alt="Статуя">
+            <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="/images/cards-interliving.png" alt="Лестница">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Лестница">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="/images/cards-question.png" alt="Человек в помещении">
+            <img class="cards__image" src="images/cards-question.png" alt="Человек в помещении">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос,
@@ -80,7 +80,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="/images/cards-competence.png" alt="Стопка книг на руке">
+            <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг на руке">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только кажется,
@@ -179,7 +179,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="/images/khan-book.jpg" alt="Книга Весь мир — школа, Салман Хан">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга Весь мир — школа, Салман Хан">
             <a href="#" class="khan__buy-link transition">Купить книку</a>
           </div>
         </div>
