--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
@@ -45,60 +44,56 @@
           </div>
         </div>
       </section>
-      <section class="techniques page__techniques">
+      <section class="techniques content__techniques">
         <h2 class="section-title techniques__section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="Книга">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и
               рассеянное мышление.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции памяти.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-interliving.png" alt="Лестница">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-question.png" alt="Человек в помещении">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос,
               который вас действительно волнует.
             </p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг на руке">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только кажется,
               что вы владеете новой темой.
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
       <section class="video">
         <h2 class="section-title video__section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            Как выучить все. Джош Кауфман
-          </iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            Что происходит в голове прокрастинатора. Тим Урбан
-          </iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -236,12 +231,28 @@
         <p class="section-subtitle">
           Больше материалов о техниках и лайфхаках обучения
         </p>
-        <div class="resources__logo-zone">
-          <div class="resources__logo resources__logo_type_arzamas"></div>
-          <div class="resources__logo resources__logo_type_nplusodin"></div>
-          <div class="resources__logo resources__logo_type_strelka"></div>
-          <div class="resources__logo resources__logo_type_polka"></div>
-        </div>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo">
+            <a class="transition" href="#" target="_blank">
+              <img src="images/logo/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__img">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a class="transition" href="#" target="_blank">
+              <img src="images/logo/resources-n1.svg" alt="Логотип Н+1" class="resources__img">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a class="transition" href="#" target="_blank">
+              <img src="images/logo/resources-strelka.svg" alt="Логотип Стрелка" class="resources__img">
+            </a>
+          </li>
+          <li class="resources__logo">
+            <a class="transition" href="#" target="_blank">
+              <img src="images/logo/resources-polka.svg" alt="Логотип Полка" class="resources__img">
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
@@ -261,16 +272,16 @@
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link transition" href="#">
+            <li><a class="footer__column-link transition" target="_blank" href="#">
               <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">
               Facebook
             </a></li>
-            <li><a class="footer__column-link transition" href="#">
+            <li><a class="footer__column-link transition" target="_blank" href="#">
               <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">
               ВКонтакте
             </a></li>
-            <li><a class="footer__column-link transition" href="#">
-              <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">
+            <li><a class="footer__column-link transition" target="_blank" href="#">
+              <img src="./images/instagram_color_white.svg"  alt="Инстаграм" class="footer__social-icon">
               Instagram
             </a></li>
           </ul>
